--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         button {
             background-color: #e9c1ee; 
             border: none;
-            color: pink;
+            color: rgb(13, 21, 40);
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
@@ -53,18 +53,17 @@
     <h1 style="text-align: center; font-size: 45px; color:rgb(160, 212, 255)">Shining Star</h1>
     <br>
 
-    <button><a href="https://github.com/meghanguo/shining_star">Github</a></button>
-    <button><a href="about.html">About Shining Star</a></button>
-    <button><a href="data.html">Data</a></button>
-    <button><a href="install.html">Install and Run</a></button>
-    <button><a href="comments.html">Comments</a></button>
-    <button><a href="optimizations.html">Optimizations</a></button>
+    <a href="index.html"><button>About Shining Star</button></a>
+    <a href="data.html"><button>Data</button></a>
+    <a href="install.html"><button>Install and Run</button></a>
+    <a href="comments.html"><button>Comments</button></a>
+    <a href="optimizations.html"><button>Optimizations</button></a>
 
     <div class="horizontal-line"></div>
 
     <body>
     <h2 style="text-align: center; font-size: 30px; color:rgb(198, 237, 255)">About</h2>
-    <p style = "margin-left: 100px;">This application visualizes stars from the <a href="https://github.com/astronexus/ATHYG-Database">ATHYG database</a>. Users can travel through space and see various constellations from different cultures. Thie application was developed for CS 528 at University of Illinois at Chicago in Spring 2024. Application was built on Unity 2019.2 for CAVE2.</p>
+    <p style = "margin-left: 100px;">This application visualizes stars from the <a href="https://github.com/astronexus/ATHYG-Database" style="color: pink;">ATHYG database</a>. Users can travel through space and see various constellations from different cultures. Thie application was developed for CS 528 at University of Illinois at Chicago in Spring 2024. Application was built on Unity 2019.2 for CAVE2.</p>
 
     <br>
     <h2 style="text-align: center; font-size: 30px; color:rgb(198, 237, 255)">Features</h2>
