--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 
     <div class="horizontal-line"></div>
 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LO3ARalJAv4" frameborder="0" allowfullscreen></iframe>
+
     <body>
     <h2 style="text-align: center; font-size: 30px; color:rgb(198, 237, 255)">About</h2>
     <p style = "margin-left: 100px;">This application visualizes stars from the <a href="https://github.com/astronexus/ATHYG-Database" style="color: pink;">ATHYG database</a>. Users can travel through space and see various constellations from different cultures. This application was developed for CS 528 at University of Illinois at Chicago in Spring 2024. Application was built on Unity 2019.2 for CAVE2.</p>
