install had extra words

--- a/install.html
+++ b/install.html
@@ -67,7 +67,7 @@
     <h2 style="text-align: center; font-size: 30px; color:rgb(198, 237, 255)">Install and Run</h2>
     <div style="width: 90%;">
         <div style="overflow: hidden;">
-            <p style="text-align: left; margin-left: 130px; margin-top: 10px;"><strong>Download Files on </strong>: <a href="https://github.com/meghanguo/shining_star" style="color: pink;">Github</a> Only the "athyg_31_reduced_m10" dataset was used for this application.</p>
+            <p style="text-align: left; margin-left: 130px; margin-top: 10px;"><strong>Download Files on </strong>: <a href="https://github.com/meghanguo/shining_star" style="color: pink;">Github</a></p>
             <br>
             <p style="text-align: left; margin-left: 130px; margin-top: 10px;"> <strong>Build</strong>:</p>
             <p style="text-align: left; margin-left: 130px; margin-top: 10px;"> 1. Download the source code via link above</p>
